--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "devDependencies": {
     "css-loader": "^4.2.2",
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.10.0",
@@ -19,7 +22,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "bundle": "webpack",
-    "develop": "webpack-dev-server"
+    "develop": "webpack-dev-server",
+    "lint-fix": "eslint --fix ."
   },
   "repository": {
     "type": "git",
