add initial redux code

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "gulp": "^4.0.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
